final docker fixes Add readme file

--- a/NoteTakingAPI/docker-compose.yml
+++ b/NoteTakingAPI/docker-compose.yml
@@ -2,11 +2,10 @@ services:
   noteapi:
     build: .
     ports:
-      - "8080:80"
-      - "8081:8081"
+      - "5800:80"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:8081;http://+:80
+      - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=noteapi_dev;Username=postgres;Password=password123
       - JwtSettings__Secret=dzalian-dzalian-dzalian-magari-secret-256-bit
       - JwtSettings__Issuer=NoteApi
